# wordle

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  dev_requirements.txt  pyproject.toml  setup.cfg  wordle_prob.py
src/wordle/: __main__.py  benchmark.py  cli.py  core.py  heartify.py  loaders.py  repl.py  solvers.py  wordle.py  wordle_prob.py
src/wordle/analysis/: benchmark.py  entval.py  evaltpe.py  ndle.py
src/wordle/resources/: bnccoca10000-grouped.txt
tests/: test_heartify.py  test_import.py  test_loader.py  test_playsession.py  test_solver.py  test_wordle.py  testwl.txt
