[metadata]
name = wordle
author = K Hariram
author_email = harirarn@gmail.com
description = A wordle solver
version = 0.1.0
url = https://github.com/Harirarn/wordle
keywords =
  wordle
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  License :: OSI Approved :: MIT License
license_files =
  LICENSE

[options]
python_requires = >= 3.6
packages = wordle
zip_safe = True
package_dir = 
    =src
